tests/snapshots/mdtest__basic2__Missing_semicolon.snap
---
source: tests/mdtest.rs
expression: output
---
error: expected `;`
  ┌─ test input:1:1
  │
1 │ let input: Stmt
  │ ^ expected `;`
  │
  = expected `;`
